src/objects/ServiceRequestTypeFlexNote__c.object
<CustomObject>
    <description>Contains all the flex notes that related to a service request type and attributes specific to it.</description>
    <fields>
        <fullName>Auto_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplaySortOrder__c</fullName>
        <description>Please dont use its for testing</description>
        <formula>IF(ISNUMBER(Order__c), VALUE( Order__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlexNote_Question__c</fullName>
        <label>FlexNote Question</label>
        <referenceTo>FlexNoteQuestion__c</referenceTo>
        <relationshipLabel>Service Request Type Flex Notes</relationshipLabel>
        <relationshipName>Service_Request_Type_Flex_Notes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Force_Upper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Upper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequiredQuestion__c</fullName>
        <formula>/*Any of them is true then formula shuld return true*/
/*if flexnoteQuestion is made true or junction record made true than question is required*/




if(OR(FlexNote_Question__r.Required__c , isRequired__c ) ,true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>FlexNote_Question__r.QuestionAlias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Junction_Count__c</fullName>
        <formula>FlexNote_Question__r.SRJunctionCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Junction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SR_Type_Agency__c</fullName>
        <formula>Service_Request_Type__r.Jurisdiction__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Type Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Type_Jurisdiction_Code__c</fullName>
        <formula>Service_Request_Type__r.Jurisdiction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Type Jurisdiction Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Type_Name__c</fullName>
        <formula>Service_Request_Type__r.Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <referenceTo>ServiceRequestType__c</referenceTo>
        <relationshipLabel>Service Request Type Flex Notes</relationshipLabel>
        <relationshipName>Service_Request_Type_Flex_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_By_Interface_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used By Interface Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Request Type Flex Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Service_Request_Type__c</columns>
        <columns>SR_Type_Name__c</columns>
        <columns>SR_Type_Agency__c</columns>
        <columns>FlexNote_Question__c</columns>
        <columns>IsRequiredQuestion__c</columns>
        <columns>Order__c</columns>
        <columns>SR_Junction_Count__c</columns>
        <columns>NAME</columns>
        <columns>DisplaySortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRFN-{0000}</displayFormat>
        <label>Service Request Type FlexNote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Type Flex Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>